# pyjack

./: README.md  pyproject.toml
pyjack/: deck.py
tests/: test_pyjack.py
