[tool.poetry]
name = "pyjack"
version = "0.1.0"
description = "A flexible blackjack game I felt like making"
authors = ["Peter Marks <peter.marks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
